--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,4 +1,4 @@
-name: 自动部署到 GitHub Pages
+name: 自动部署到 GitHub Pages (链接到GitHub)
 
 on:
   push:
@@ -39,117 +39,72 @@ jobs:
           cp -r assets dist/
           cp -r 综合测评 dist/
 
-      - name: (已修正) 生成各年份目录的README文件
+      - name: (最终版) 生成链接到GitHub的README文件
         run: |
+          # 定义你的GitHub仓库基础URL
+          BASE_URL="https://github.com/zuoliangyu/NUEDC_TOPIC/blob/master"
+
           # 为每个年份目录创建README.md文件
           for year_dir in dist/真题/*/; do
             if [ -d "$year_dir" ]; then
               year=$(basename "$year_dir")
-              echo "正在为 $year 年生成README文件..."
-              
               readme_path="${year_dir}README.md"
-              cat > "$readme_path" << EOF
-          # ${year}年全国大学生电子设计竞赛题目
-          
-          ## 📋 题目列表
-          
-          EOF
+              echo "# ${year}年全国大学生电子设计竞赛题目" > "$readme_path"
+              echo "" >> "$readme_path"
+              echo "## 📋 题目列表" >> "$readme_path"
+              echo "" >> "$readme_path"
               
-              # 【修正】使用更稳妥的方式查找文件并生成链接
-              find "$year_dir" -maxdepth 1 -type f \( -name "*.pdf" -o -name "*.doc" -o -name "*.docx" -o -name "*.jpg" -o -name "*.zip" \) | sort | while read -r file; do
-                filename=$(basename "$file")
-                title=$(echo "$filename" | sed 's/\.[^.]*$//')
-                
-                if [[ "$filename" == *.pdf ]]; then
-                  echo "- [$title]($filename \":include\")" >> "$readme_path"
-                else
-                  echo "- [$title]($filename)" >> "$readme_path"
+              # 【修改】查找文件并生成指向GitHub的完整URL链接
+              find "$year_dir" -maxdepth 1 -type f | sort | while read -r file; do
+                if [[ "$file" != *.md ]]; then
+                  filename=$(basename "$file")
+                  title=$(echo "$filename" | sed 's/\.[^.]*$//')
+                  # 从 'dist/真题/2023/file.pdf' 中提取 '真题/2023/file.pdf'
+                  repo_path=${file#dist/}
+                  # URL编码路径以处理特殊字符
+                  encoded_path=$(python3 -c "import urllib.parse; print(urllib.parse.quote('$repo_path'))")
+                  echo "- [$title]($BASE_URL/$encoded_path)" >> "$readme_path"
                 fi
               done
               
-              cat >> "$readme_path" << EOF
-          
-          ## 📖 使用说明
-          
-          点击上方题目链接可直接在本页预览PDF文件。其他格式文件将提供下载或在新窗口预览。
-          
-          ---
-          
-          [🔙 返回首页](/)
-          EOF
+              echo "" >> "$readme_path"
+              echo "---" >> "$readme_path"
+              echo "[🔙 返回首页](/#/)" >> "$readme_path"
             fi
           done
-          
+
           # 为综合测评目录创建README文件
           if [ -d "dist/综合测评/" ]; then
-            echo "正在为综合测评生成README文件..."
-            
             readme_path="dist/综合测评/README.md"
-            cat > "$readme_path" << 'EOF'
-          # 全国大学生电子设计竞赛综合测评题目
-          
-          ## 📋 历年综合测评题目
-          
-          EOF
-            
-            # 【修正】按子目录和文件分别处理，保证路径正确
-            # 先处理子目录
-            find "dist/综合测评/" -maxdepth 1 -mindepth 1 -type d | sort | while read -r subdir; do
-              dirname=$(basename "$subdir")
-              echo "处理综合测评子目录: $dirname"
-              
-              pdf_file=$(find "$subdir" -maxdepth 1 -name "*.pdf" | head -1)
-              if [ -n "$pdf_file" ]; then
-                pdf_filename=$(basename "$pdf_file")
-                pdf_title=$(echo "$pdf_filename" | sed 's/\.pdf$//')
-                echo "- [$pdf_title]($dirname/$pdf_filename \":include\")" >> "$readme_path"
-              fi
-              
-              sim_files=$(find "$subdir" -type f -name "*.ms*" | head -1)
-              if [ -n "$sim_files" ]; then
-                echo "  - [仿真文件]($dirname/)" >> "$readme_path"
-                
-                sub_readme_path="${subdir}README.md"
-                cat > "$sub_readme_path" << SUBEOF
-          # $dirname 仿真文件
-          
-          ## 📋 仿真文件列表
-          
-          SUBEOF
-                
-                find "$subdir" -maxdepth 1 -type f | sort | while read -r file; do
-                  if [[ "$file" != *.md ]]; then
-                    filename=$(basename "$file")
-                    title=$(echo "$filename" | sed 's/\.[^.]*$//')
-                    echo "- [$title]($filename)" >> "$sub_readme_path"
+            echo "# 全国大学生电子设计竞赛综合测评题目" > "$readme_path"
+            echo "" >> "$readme_path"
+            echo "## 📋 历年综合测评题目" >> "$readme_path"
+            echo "" >> "$readme_path"
+
+            find "dist/综合测评" -mindepth 1 -maxdepth 2 -type f | sort | while read -r file; do
+               if [[ "$file" != *.md ]]; then
+                  filename=$(basename "$file")
+                  title=$(echo "$filename" | sed 's/\.[^.]*$//')
+                  # 获取父目录名以进行分组
+                  parent_dir=$(basename "$(dirname "$file")")
+
+                  # 如果父目录不是"综合测评"，则显示分组
+                  if [[ "$parent_dir" != "综合测评" ]]; then
+                    title="$parent_dir - $title"
                   fi
-                done
-                
-                cat >> "$sub_readme_path" << SUBEOF
-          
-          ---
-          
-          [🔙 返回综合测评](../)
-          SUBEOF
-              fi
+                  
+                  repo_path=${file#dist/}
+                  encoded_path=$(python3 -c "import urllib.parse; print(urllib.parse.quote('$repo_path'))")
+                  echo "- [$title]($BASE_URL/$encoded_path)" >> "$readme_path"
+               fi
             done
             
-            # 再处理根目录下的文件
-            find "dist/综合测评/" -maxdepth 1 -type f -name "*.pdf" | sort | while read -r file; do
-              filename=$(basename "$file")
-              title=$(echo "$filename" | sed 's/\.pdf$//')
-              echo "- [$title]($filename \":include\")" >> "$readme_path"
-            done
-            
-            cat >> "$readme_path" << 'EOF'
-          ---
-          
-          [🔙 返回首页](/)
-          EOF
+            echo "" >> "$readme_path"
+            echo "---" >> "$readme_path"
+            echo "[🔙 返回首页](/#/)" >> "$readme_path"
           fi
-      
-      # (后续步骤无需修改，保持原样即可)
-      - name: 创建 docsify 配置文件
+
+      - name: 创建 docsify 配置文件 (移除PDF插件)
         run: |
           cat > dist/index.html << 'EOF'
           <!DOCTYPE html>
@@ -195,7 +150,6 @@ jobs:
             <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
             <script src="//cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.min.js"></script>
             <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
-            <script src="//cdn.jsdelivr.net/npm/docsify-pdf-embed-plugin/src/docsify-pdf-embed.js"></script>
             <script src="//cdn.jsdelivr.net/npm/docsify@4/lib/plugins/zoom-image.min.js"></script>
             <script src="//cdn.jsdelivr.net/npm/docsify-copy-code@2/dist/docsify-copy-code.min.js"></script>
           </body>
@@ -212,7 +166,6 @@ jobs:
           
           EOF
           
-          # 动态生成年份链接 (按年份倒序)
           ls -dr dist/真题/*/ | while read year_dir; do
             if [ -d "$year_dir" ]; then
               year=$(basename "$year_dir")
